--- a/css/index.css
+++ b/css/index.css
@@ -208,20 +208,10 @@ section p {
     }
 }
 
-@media (max-width: 480px) {
-    .menu li a {
-        font-size: 18px;
-    }
-
-    .icono {
-        font-size: 16px;
-    }
-
-    .close-button {
-        font-size: 18px;
-    }
-
-    .menu li::after {
-        width: 90%;
+@media only screen and (max-width: 600px) {
+    .container {
+        margin: 0;
+        padding: 0;
+        width: 100%;
     }
 }
